Support deriving custom schema definitions
- Add `api_schema` proc macro attribute for custom definitions
- Add `Schemable` trait for Schema objects
- Cleanup and simplify $ref resolver

--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "paperclip-codegen"
+name = "paperclip-derive"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
 
+[lib]
+proc-macro = true
+
 [dependencies]
-paperclip-openapi = { path = "../openapi" }
+quote = "0.6.12"
+syn = { version = "0.15.34", features = ["full"] }
