--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 failure = "0.1.5"
 failure_derive = "0.1.5"
+log = "0.4.6"
+paperclip-derive = { path = "../codegen" }
 serde = "1.0.91"
 serde_derive = "1.0.91"
 serde_json = "1.0.39"
