--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -7,13 +7,17 @@ edition = "2018"
 [dependencies]
 failure = "0.1.5"
 failure_derive = "0.1.5"
+heck = { version = "0.3.1", optional = true }
 log = "0.4.6"
-paperclip-derive = { path = "../codegen" }
+paperclip-macros = { path = "../macros" }
+quote = { version = "0.6.12", optional = true }
 serde = "1.0.91"
 serde_derive = "1.0.91"
 serde_json = "1.0.39"
 serde_yaml = "0.8.9"
+syn = { version = "0.15.34", features = ["full"], optional = true }
 
 [features]
 default = ["v2"]
 v2 = []
+codegen = ["heck", "syn", "quote"]
