--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -11,13 +11,19 @@ heck = { version = "0.3.1", optional = true }
 log = "0.4.6"
 paperclip-macros = { path = "../macros" }
 quote = { version = "0.6.12", optional = true }
+rustfmt = { version = "0.10.0", optional = true }
 serde = "1.0.91"
 serde_derive = "1.0.91"
 serde_json = "1.0.39"
 serde_yaml = "0.8.9"
 syn = { version = "0.15.34", features = ["full"], optional = true }
 
+[dev-dependencies]
+env_logger = "0.6.1"
+lazy_static = "1.3.0"
+
 [features]
 default = ["v2"]
 v2 = []
 codegen = ["heck", "syn", "quote"]
+codegen-fmt = ["rustfmt"]
