--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -10,6 +10,7 @@ failure_derive = "0.1.5"
 heck = { version = "0.3.1", optional = true }
 log = "0.4.6"
 paperclip-macros = { path = "../macros" }
+parking_lot = { version = "0.8.0" }
 quote = { version = "0.6.12", optional = true }
 rustfmt = { version = "0.10.0", optional = true }
 serde = "1.0.91"
