Refactor and properly build generated code
 - Refactor for fine-grained emitting
 - Schema defs are tracked for reference cycles and boxed appropriately in structs
 - Properly convert to snake case for fields
 - Replace some Rust keywords in fields
 - Build generated code in tests

--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -27,4 +27,4 @@ lazy_static = "1.3.0"
 default = ["v2"]
 v2 = []
 codegen = ["heck", "syn", "quote"]
-codegen-fmt = ["rustfmt"]
+codegen-fmt = ["codegen", "rustfmt"]
