Track description fields for docs and generate object and field docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,11 @@ matrix:
     script:
     - cargo test --all --all-features
     - cargo doc --all --all-features --no-deps
-    - cd openapi/tests/test_k8s && cargo build
+    - cd openapi/tests/test_k8s
+    - cargo build
     - cargo doc --all --all-features --no-deps
-    - cp -r target/doc ../../../target/doc/tests
+    - cd -
+    - cp -r openapi/tests/test_k8s/target/doc target/doc/tests
 
 deploy:
   provider: pages
