--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4.6"
 paperclip-macros = { path = "../macros" }
 parking_lot = { version = "0.8.0" }
 quote = { version = "0.6.12", optional = true }
+regex = "1.1.6"
 rustfmt-nightly = { version = "1.2.2", optional = true }
 serde = "1.0.91"
 serde_derive = "1.0.91"
