--- a/openapi/tests/test_k8s/Cargo.toml
+++ b/openapi/tests/test_k8s/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 path = "lib.rs"
 
 [dependencies]
+failure = "0.1.5"
+failure_derive = "0.1.5"
+futures = "0.1.27"
+reqwest = "0.9.18"
 serde = "1.0.91"
 serde_derive = "1.0.91"
 
