--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "paperclip-openapi"
+name = "paperclip"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
