--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 failure = "0.1.5"
 failure_derive = "0.1.5"
 heck = { version = "0.3.1", optional = true }
+itertools = "0.8.0"
 lazy_static = "1.3.0"
 log = "0.4.6"
 paperclip-macros = { path = "../macros" }
