--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -3,6 +3,13 @@ name = "paperclip"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
+description = "WIP OpenAPI codegen"
+documentation = "https://paperclip.waffles.space/paperclip"
+keywords = ["openapi", "api", "swagger", "http", "web"]
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/wafflespeanut/paperclip"
+repository = "https://github.com/wafflespeanut/paperclip"
+readme = "../README.md"
 
 [dependencies]
 failure = "0.1.5"
@@ -11,7 +18,7 @@ heck = { version = "0.3.1", optional = true }
 itertools = "0.8.0"
 lazy_static = "1.3.0"
 log = "0.4.6"
-paperclip-macros = { path = "../macros" }
+paperclip-macros = { path = "../macros", version = "0.1.0" }
 parking_lot = { version = "0.8.0" }
 quote = { version = "0.6.12", optional = true }
 regex = "1.1.6"
