--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paperclip"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
 description = "WIP OpenAPI codegen for type-safe compile-time checked HTTP APIs"
@@ -14,11 +14,13 @@ readme = "../README.md"
 [[bin]]
 name = "paperclip"
 path = "src/bin/main.rs"
+required-features = ["default", "cli"]
 
 [dependencies]
 env_logger = "0.6.1"
 failure = "0.1.5"
 failure_derive = "0.1.5"
+git2 = { version = "0.9.1", optional = true }
 heck = { version = "0.3.1", optional = true }
 itertools = "0.8.0"
 lazy_static = "1.3.0"
@@ -31,7 +33,7 @@ serde = "1.0.91"
 serde_derive = "1.0.91"
 serde_json = "1.0.39"
 serde_yaml = "0.8.9"
-structopt = "0.2.16"
+structopt = { version = "0.2.16", optional = true }
 
 [dev-dependencies]
 env_logger = "0.6.1"
@@ -40,4 +42,5 @@ env_logger = "0.6.1"
 default = ["v2", "codegen"]
 v2 = []
 codegen = ["heck"]
+cli = ["structopt", "git2"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
