--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ matrix:
     - cp -r openapi/tests/test_k8s/target/doc target/doc/tests
     - cd openapi/tests/test_pet
     - cargo build
+    - cd ../test_k8s/cli
+    - CARGO_TARGET_DIR=../target cargo build
 
 deploy:
   provider: pages
