--- a/openapi/tests/test_k8s/Cargo.toml
+++ b/openapi/tests/test_k8s/Cargo.toml
@@ -11,6 +11,7 @@ path = "lib.rs"
 failure = "0.1.5"
 failure_derive = "0.1.5"
 futures = "0.1.27"
+parking_lot = "0.8.0"
 reqwest = "0.9.18"
 serde = "1.0.91"
 serde_derive = "1.0.91"
