--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -34,6 +34,7 @@ serde_derive = "1.0.91"
 serde_json = "1.0.39"
 serde_yaml = "0.8.9"
 structopt = { version = "0.2.16", optional = true }
+url = "1.7.2"
 
 [dev-dependencies]
 env_logger = "0.6.1"
