Check path uniqueness and validate templated paths

--- a/openapi/tests/pet-v2.yaml
+++ b/openapi/tests/pet-v2.yaml
@@ -40,6 +40,11 @@ definitions:
     type: object
 paths:
   /pets/{petId}:
+    parameters:
+    - name: petId
+      in: path
+      required: true
+      type: integer
     get:
       description: Find pet by ID
       operationId: getPetById
