--- a/openapi/Cargo.toml
+++ b/openapi/Cargo.toml
@@ -28,6 +28,7 @@ log = "0.4.6"
 paperclip-macros = { path = "../macros", version = "0.1.0" }
 parking_lot = { version = "0.8.0" }
 regex = "1.1.6"
+reqwest = { version = "0.9.18", optional = true }
 # rustfmt-nightly = { version = "1.2.2", optional = true }
 serde = "1.0.91"
 serde_derive = "1.0.91"
@@ -43,5 +44,5 @@ env_logger = "0.6.1"
 default = ["v2", "codegen"]
 v2 = []
 codegen = ["heck"]
-cli = ["structopt", "git2"]
+cli = ["structopt", "git2", "reqwest"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
