Init proof-of-concept spec hosting plugin for actix-web

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,8 @@
 members = [
   "macros",
   "openapi",
+  "plugins/actix-web"
 ]
+
+[patch.crates-io]
+actix-web = { git = "https://github.com/wafflespeanut/actix-web" }
