--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,5 +13,6 @@ repository = "https://github.com/wafflespeanut/paperclip"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "0.4.30"
 quote = "0.6.12"
 syn = { version = "0.15.34", features = ["full"] }
