--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -10,7 +10,10 @@ actix-web = "1.0.3"
 paperclip = { path = "../../openapi", version = "0.2.0" }
 paperclip-actix-macros = { path = "../actix-macros", version = "0.1.0" }
 parking_lot = "0.8.0"
-lazy_static = "1.3.0"
 
 [dev-dependencies]
+actix-rt = "0.2.3"
+reqwest = "0.9.18"
+lazy_static = "1.3.0"
 serde = "1.0"
+serde_json = "1.0"
