--- a/plugins/actix-macros/Cargo.toml
+++ b/plugins/actix-macros/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "0.4.30"
 quote = "0.6.12"
 syn = { version = "0.15.34", features = ["full"] }
 heck = "0.3.1"
