--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "paperclip-macros"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
-description = "Macros for paperclip OpenAPI codegen"
+description = "Macros for paperclip OpenAPI tooling library"
 documentation = "https://paperclip.waffles.space/paperclip_macros"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/wafflespeanut/paperclip"
