--- a/plugins/actix-macros/Cargo.toml
+++ b/plugins/actix-macros/Cargo.toml
@@ -3,7 +3,7 @@ name = "paperclip-actix-macros"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
-description = "Macros for paperclip OpenAPI actix plugin"
+description = "Macros for paperclip-actix plugin"
 documentation = "https://paperclip.waffles.space/paperclip_actix_macros"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/wafflespeanut/paperclip"
