--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -3,10 +3,15 @@ name = "paperclip-actix"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
+description = "Paperclip OpenAPI plugin for actix-web"
+documentation = "https://paperclip.waffles.space/paperclip_actix"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/wafflespeanut/paperclip"
+repository = "https://github.com/wafflespeanut/paperclip"
 
 [dependencies]
 actix-service = "0.4.1"
-actix-web = "1.0.3"
+actix-web = "1.0.4"
 lazy_static = "1.3.0"
 paperclip = { path = "../../openapi", version = "0.2.0", features = ["actix"] }
 paperclip-actix-macros = { path = "../actix-macros", version = "0.1.0" }
