Refactor and split crates
- Introduce paperclip_core for paperclip and actix-web plugin
- Merge paperclip_actix_macros and paperclip_macros with feature gates
- Expose paperclip_actix::* through paperclip::actix::* when "actix"
feature is enabled.
- Bump version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
     - CACHE_NAME=test
     script:
     - cargo test --all --all-features
-    - cd openapi/tests/test_k8s
+    - cd tests/test_k8s
     - cargo build
     - cd ../test_pet
     - cargo build
