--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,53 @@
-[workspace]
-members = [
-  "macros",
-  "openapi",
-  "plugins/actix-web"
-]
+[package]
+name = "paperclip"
+version = "0.3.0"
+authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
+edition = "2018"
+description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
+documentation = "https://paperclip.waffles.space/paperclip"
+keywords = ["openapi", "api", "swagger", "http", "web"]
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/wafflespeanut/paperclip"
+repository = "https://github.com/wafflespeanut/paperclip"
+readme = "README.md"
+
+[[bin]]
+name = "paperclip"
+path = "src/bin/main.rs"
+required-features = ["cli"]
+
+[dependencies]
+env_logger = { version = "0.6", optional = true }
+failure = "0.1"
+failure_derive = "0.1"
+git2 = { version = "0.9", optional = true }
+heck = { version = "0.3", optional = true }
+itertools = "0.8"
+lazy_static = { version = "1.3", optional = true }
+log = "0.4"
+paperclip-actix = { path = "plugins/actix-web", version = "0.1.0", optional = true }
+paperclip-core = { path = "core", version = "0.1.0" }
+paperclip-macros = { path = "macros", version = "0.2.0" }
+parking_lot = { version = "0.8" }
+regex = { version = "1.1", optional = true }
+reqwest = { version = "0.9", optional = true }
+# rustfmt-nightly = { version = "1.2.2", optional = true }
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+serde_yaml = "0.8"
+structopt = { version = "0.2", optional = true }
+url = "1.7"
+
+[dev-dependencies]
+actix-rt = "0.2.3"
+actix-service = "0.4.1"
+actix-web = "1.0.4"
+
+[features]
+actix = ["paperclip-macros/actix", "paperclip-actix"]
+default = ["v2", "codegen", "paperclip-macros/default"]
+v2 = ["paperclip-macros/v2"]
+codegen = ["heck", "lazy_static", "regex"]
+cli = ["default", "env_logger", "structopt", "git2", "reqwest"]
+# codegen-fmt = ["codegen", "rustfmt-nightly"]
