--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,3 +16,9 @@ proc-macro = true
 proc-macro2 = "0.4.30"
 quote = "0.6.12"
 syn = { version = "0.15.34", features = ["full"] }
+heck = { version = "0.3", optional = true }
+
+[features]
+actix = ["heck"]
+default = ["v2"]
+v2 = []
