--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -3,7 +3,7 @@ name = "paperclip-actix"
 version = "0.1.0"
 authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
 edition = "2018"
-description = "Paperclip OpenAPI plugin for actix-web"
+description = "Paperclip OpenAPI plugin for actix-web framework"
 documentation = "https://paperclip.waffles.space/paperclip_actix"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/wafflespeanut/paperclip"
@@ -13,13 +13,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 futures = "0.1"
 actix-service = "0.4.1"
 actix-web = "1.0.4"
-lazy_static = "1.3.0"
-paperclip = { path = "../../openapi", version = "0.2.0", features = ["actix"] }
-paperclip-actix-macros = { path = "../actix-macros", version = "0.1.0" }
-parking_lot = "0.8.0"
-
-[dev-dependencies]
-actix-rt = "0.2.3"
-reqwest = "0.9.18"
-serde = "1.0"
-serde_json = "1.0"
+lazy_static = "1.3"
+paperclip-core = { path = "../../core", version = "0.1.0", features = ["actix"] }
+paperclip-macros = { path = "../../macros", version = "0.2.0", features = ["actix"] }
+parking_lot = "0.8"
