--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ lazy_static = { version = "1.3", optional = true }
 log = "0.4"
 paperclip-actix = { path = "plugins/actix-web", version = "0.1.0", optional = true }
 paperclip-core = { path = "core", version = "0.1.0" }
-paperclip-macros = { path = "macros", version = "0.2.0" }
+paperclip-macros = { path = "macros", version = "0.2.0", optional = true }
 parking_lot = { version = "0.8" }
 regex = { version = "1.1", optional = true }
 reqwest = { version = "0.9", optional = true }
@@ -46,8 +46,8 @@ actix-web = "1.0.4"
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix"]
-default = ["v2", "codegen", "paperclip-macros/default"]
-v2 = ["paperclip-macros/v2"]
+default = ["v2", "codegen"]
+v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 codegen = ["heck", "lazy_static", "regex"]
 cli = ["default", "env_logger", "structopt", "git2", "reqwest"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
