--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,5 +21,5 @@ serde = "1.0"
 
 [features]
 actix = ["default", "actix-http"]
-default = ["v2", "paperclip-macros/default"]
+default = ["v2"]
 v2 = ["paperclip-macros/v2"]
