--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,8 +10,10 @@ homepage = "https://github.com/wafflespeanut/paperclip"
 repository = "https://github.com/wafflespeanut/paperclip"
 
 [dependencies]
+actix-web = { version = "1.0.4", optional = true }
 actix-http = { version = "0.2.6", optional = true }
 failure = "0.1"
+futures = { version = "0.1", optional = true }
 lazy_static = "1.3"
 log = "0.4"
 paperclip-macros = { path = "../macros", version = "0.2.0" }
@@ -20,6 +22,6 @@ regex = "1.1"
 serde = "1.0"
 
 [features]
-actix = ["default", "actix-http"]
+actix = ["default", "actix-http", "actix-web", "futures"]
 default = ["v2"]
 v2 = ["paperclip-macros/v2"]
