--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -17,8 +17,9 @@ proc-macro2 = "0.4.30"
 quote = "0.6.13"
 syn = { version = "0.15.42", features = ["full"] }
 heck = { version = "0.3", optional = true }
+lazy_static = { version = "1.3", optional = true }
 
 [features]
-actix = ["heck"]
+actix = ["heck", "lazy_static"]
 default = ["v2"]
 v2 = []
