--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,10 @@ matrix:
     - CACHE_NAME=build
     script:
     - cargo build
+    - cargo build --features v2
     - cargo build --features default
+    - cargo build --features actix
+    - cargo build --features cli
     - cargo build --all --all-features
   - name: test
     env:
