Support header parameters (fixes #81)

--- a/tests/pet-v2.yaml
+++ b/tests/pet-v2.yaml
@@ -72,6 +72,13 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Pet'
+      - in: header
+        name: X-Auth
+        required: true
+        type: string
+      - in: header
+        name: X-Pet-ID
+        type: integer
       responses:
         "200":
           schema:
