Add error variants and default decoder based on spec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ futures = "0.1"
 actix = ["paperclip-macros/actix", "paperclip-actix"]
 default = ["v2", "codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
-codegen = ["heck", "lazy_static", "regex", "tinytemplate"]
+codegen = ["heck", "lazy_static", "regex", "tinytemplate", "paperclip-core/codegen"]
 cli = ["default", "env_logger", "structopt", "git2", "reqwest"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
 
