--- a/tests/test_k8s/Cargo.toml
+++ b/tests/test_k8s/Cargo.toml
@@ -15,5 +15,7 @@ parking_lot = "0.8.0"
 reqwest = "0.9.18"
 serde = "1.0.91"
 serde_derive = "1.0.91"
+serde_json = "1.0"
+serde_yaml = "0.8.9"
 
 [workspace]
