Switch to serde_json::Value for enums (fixes #99)

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,6 +20,7 @@ paperclip-macros = { path = "../macros", version = "0.2.0" }
 parking_lot = "0.9"
 regex = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
 mime = { git = "https://github.com/hyperium/mime", features = ["serde1"] }
 
 [features]
