--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -24,6 +24,7 @@ parking_lot = "0.9"
 regex = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+uuid = {version = "0", optional = true}
 
 [features]
 actix = ["default", "actix-http", "actix-web", "futures"]
@@ -31,3 +32,4 @@ datetime = ["chrono"]
 default = ["v2", "codegen"]
 v2 = ["paperclip-macros/v2"]
 codegen = ["heck"]
+uid = ["uuid"]
