--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,12 @@ url = "1.7"
 actix-rt = "0.2.3"
 actix-service = "0.4.1"
 actix-web = "1.0.4"
+chrono = { version = "0.4", features = ["serde"] }
 futures = "0.1"
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix"]
+datetime = ["paperclip-core/datetime"]
 default = ["v2", "codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 codegen = ["heck", "lazy_static", "regex", "tinytemplate", "paperclip-core/codegen"]
