--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/wafflespeanut/paperclip"
 [dependencies]
 actix-web = { version = "1.0.4", optional = true }
 actix-http = { version = "0.2.6", optional = true }
+chrono = { version = "0", optional = true }
 failure = "0.1"
 futures = { version = "0.1", optional = true }
 heck = { version = "0.3", optional = true }
@@ -26,6 +27,7 @@ serde_json = "1.0"
 
 [features]
 actix = ["default", "actix-http", "actix-web", "futures"]
+datetime = ["chrono"]
 default = ["v2", "codegen"]
 v2 = ["paperclip-macros/v2"]
 codegen = ["heck"]
