--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,10 @@ matrix:
     - CACHE_NAME=test
     script:
     - cargo test --all --all-features
-    - cd tests/test_k8s
-    - cargo check
-    - cd ../test_pet
-    - cargo check
-    - cd ../test_k8s/cli
-    - CARGO_TARGET_DIR=../target cargo build
+    - cd tests/test_k8s && cargo check
+    - cd ../test_pet && cargo check
+    - cd cli && CARGO_TARGET_DIR=../target cargo check
+    - cd ../../test_k8s/cli && CARGO_TARGET_DIR=../target cargo build
     - ../target/debug/test-k8s-cli --help > /dev/null
   - name: docs
     env:
