--- a/tests/test_k8s/Cargo.toml
+++ b/tests/test_k8s/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 path = "lib.rs"
 
 [dependencies]
+async-trait = "0.1"
 failure = "0.1"
-failure_derive = "0.1"
 futures = "0.1"
+futures-preview = { version = "0.3.0-alpha.16", features = ["compat"], package = "futures-preview" }
 http = "0.1"
 lazy_static = "1.4"
 log = "0.4"
@@ -18,8 +19,8 @@ mime = { git = "https://github.com/hyperium/mime" }
 parking_lot = "0.8"
 reqwest = "0.9"
 serde = "1.0"
-serde_derive = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
+url = "2.1"
 
 [workspace]
