Use deprecation field in Operation
Add deprecated attribute if present

--- a/tests/pet-v2.yaml
+++ b/tests/pet-v2.yaml
@@ -150,6 +150,7 @@ paths:
     post:
       description: Create shipment for order
       operationID: createShipment
+      deprecated: true
       parameters:
       - in: body
         name: body
