Return response streams for file responses (fixes #88)

--- a/tests/pet-v2.yaml
+++ b/tests/pet-v2.yaml
@@ -273,3 +273,9 @@ paths:
         '200':
           schema:
             $ref: '#/definitions/TestNestedArrayWithObject'
+  /test/file/response:
+    get:
+      responses:
+        '200':
+          schema:
+            type: file
