--- a/tests/test_k8s/Cargo.toml
+++ b/tests/test_k8s/Cargo.toml
@@ -22,6 +22,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.8"
 tokio-io-old = { version = "0.1", package = "tokio-io" }
+tokio-fs-old = { version = "0.1", package = "tokio-fs" }
 url = "2.1"
 
 [workspace]
