--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,7 @@ matrix:
     - cd tests/test_k8s && cargo check
     - cd ../test_pet && cargo check
     - cd cli && CARGO_TARGET_DIR=../target cargo check
-    - cd ../../test_k8s/cli && CARGO_TARGET_DIR=../target cargo build
-    - ../target/debug/test-k8s-cli --help > /dev/null
+    - cd ../../test_k8s/cli && CARGO_TARGET_DIR=../target cargo check
   - name: docs
     env:
     - CACHE_NAME=docs
