--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ parking_lot = { version = "0.10" }
 regex = { version = "1.1", optional = true }
 reqwest = { version = "0.9", optional = true }
 # rustfmt-nightly = { version = "1.2.2", optional = true }
+rust_decimal = { version = "1.0", optional = true }
 semver = "0.9"
 serde = "1.0"
 serde_derive = "1.0"
@@ -52,6 +53,7 @@ uuid = { version = "0.8", features = ["serde"] }
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix"]
+decimal = ["paperclip-core/decimal"]
 datetime = ["paperclip-core/datetime"]
 default = ["v2", "codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
