--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,11 +10,10 @@ homepage = "https://github.com/wafflespeanut/paperclip"
 repository = "https://github.com/wafflespeanut/paperclip"
 
 [dependencies]
-actix-web = { version = "1.0.4", optional = true }
-actix-http = { version = "0.2.6", optional = true }
+actix-web = { version = "2.0", optional = true }
+actix-http = { version = "1.0", optional = true }
 chrono = { version = "0", optional = true }
 failure = "0.1"
-futures = { version = "0.1", optional = true }
 heck = { version = "0.3", optional = true }
 lazy_static = "1.3"
 log = "0.4"
@@ -29,7 +28,7 @@ serde_yaml = "0.8"
 uuid = { version = "0", optional = true }
 
 [features]
-actix = ["v2", "actix-http", "actix-web", "futures"]
+actix = ["v2", "actix-http", "actix-web"]
 datetime = ["chrono"]
 decimal = ["rust_decimal"]
 default = ["v2", "codegen"]
