--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -17,3 +17,4 @@ lazy_static = "1.3"
 paperclip-core = { path = "../../core", version = "0.1.0", features = ["actix"] }
 paperclip-macros = { path = "../../macros", version = "0.2.0", features = ["actix"] }
 parking_lot = "0.10"
+serde_json = "1.0"
