--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -18,6 +18,8 @@ quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
 heck = { version = "0.3", optional = true }
 lazy_static = { version = "1.3", optional = true }
+strum = "0.17"
+strum_macros = "0.17"
 
 [features]
 actix = ["heck", "lazy_static"]
