--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -17,11 +17,12 @@ proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
 heck = { version = "0.3", optional = true }
+http = { version = "0.2", optional = true }
 lazy_static = { version = "1.3", optional = true }
 strum = "0.17"
 strum_macros = "0.17"
 
 [features]
-actix = ["heck", "lazy_static"]
+actix = ["heck", "http", "lazy_static"]
 default = ["v2"]
 v2 = []
