--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -19,10 +19,10 @@ syn = { version = "1.0", features = ["full"] }
 heck = { version = "0.3", optional = true }
 http = { version = "0.2", optional = true }
 lazy_static = { version = "1.3", optional = true }
-strum = "0.17"
-strum_macros = "0.17"
+strum = { version = "0.17", optional = true }
+strum_macros = { version = "0.17", optional = true }
 
 [features]
-actix = ["heck", "http", "lazy_static"]
+actix = ["heck", "http", "lazy_static", "strum", "strum_macros"]
 default = ["v2"]
 v2 = []
