--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1.0"
+proc-macro-error = "0.4"
 quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
 heck = { version = "0.3", optional = true }
