--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -20,7 +20,7 @@ log = "0.4"
 mime = { git = "https://github.com/hyperium/mime", features = ["serde1"] }
 paperclip-macros = { path = "../macros", version = "0.2.0" }
 parking_lot = "0.10"
-rust_decimal = { version = "1.0", optional = true }
+rust_decimal = { version = "1", optional = true }
 regex = "1.1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
@@ -29,9 +29,10 @@ uuid = { version = "0", optional = true }
 
 [features]
 actix = ["v2", "actix-http", "actix-web"]
+codegen = ["heck"]
 datetime = ["chrono"]
 decimal = ["rust_decimal"]
 default = ["v2", "codegen"]
-v2 = ["paperclip-macros/v2"]
-codegen = ["heck"]
+nightly = ["paperclip-macros/nightly"]
 uid = ["uuid"]
+v2 = ["paperclip-macros/v2"]
