--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -27,3 +27,4 @@ strum_macros = { version = "0.18", optional = true }
 actix = ["heck", "http", "lazy_static", "strum", "strum_macros"]
 default = ["v2"]
 v2 = []
+nightly = []
