--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ actix-web = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 uuid = { version = "0.8", features = ["serde"] }
+log = { version = "0.4", features = ["kv_unstable"] }
 
 [features]
 actix = ["paperclip-macros/actix", "paperclip-actix"]
