--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ git2 = { version = "0.13", optional = true }
 heck = { version = "0.3", optional = true }
 itertools = "0.9"
 lazy_static = { version = "1.3", optional = true }
-log = "0.4"
+log = { version = "0.4", optional = true }
 paperclip-actix = { path = "plugins/actix-web", version = "0.1.0", optional = true }
 paperclip-core = { path = "core", version = "0.1.0" }
 paperclip-macros = { path = "macros", version = "0.2.0", optional = true }
@@ -53,14 +53,13 @@ uuid = { version = "0.8", features = ["serde"] }
 log = { version = "0.4", features = ["kv_unstable"] }
 
 [features]
-actix = ["paperclip-macros/actix", "paperclip-actix"]
-actix-nightly = ["actix", "paperclip-actix/nightly"]
-cli = ["default", "env_logger", "structopt", "git2", "reqwest"]
-codegen = ["heck", "lazy_static", "regex", "tinytemplate", "paperclip-core/codegen"]
+actix = ["paperclip-macros/actix", "paperclip-actix", "v2"]
+actix-nightly = ["actix", "paperclip-actix/nightly", "v2"]
+cli = ["env_logger", "structopt", "git2", "reqwest", "v2", "codegen"]
+codegen = ["heck", "lazy_static", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
 datetime = ["paperclip-core/datetime"]
 decimal = ["paperclip-core/decimal"]
-default = ["v2", "codegen"]
 uid = ["paperclip-core/uid"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 
