--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,7 +16,7 @@ chrono = { version = "0", optional = true }
 failure = "0.1"
 heck = { version = "0.3", optional = true }
 lazy_static = "1.3"
-log = "0.4"
+log = { version = "0.4", optional = true }
 mime = { git = "https://github.com/hyperium/mime", features = ["serde1"] }
 paperclip-macros = { path = "../macros", version = "0.2.0" }
 parking_lot = "0.10"
@@ -29,7 +29,7 @@ uuid = { version = "0", optional = true }
 
 [features]
 actix = ["v2", "actix-http", "actix-web"]
-codegen = ["heck"]
+codegen = ["heck", "log"]
 datetime = ["chrono"]
 decimal = ["rust_decimal"]
 default = ["v2", "codegen"]
