Codegen: Support boolean in additionalProperties

--- a/tests/pet-v2.yaml
+++ b/tests/pet-v2.yaml
@@ -57,6 +57,7 @@ definitions:
     required:
     - id
     - name
+    additionalProperties: true
     properties:
       id:
         type: integer
