--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ paperclip-core = { path = "core", version = "0.1.0" }
 paperclip-macros = { path = "macros", version = "0.2.0", optional = true }
 parking_lot = { version = "0.10" }
 regex = { version = "1.1", optional = true }
-reqwest = { version = "0.9", optional = true }
+reqwest = { version = "0.10", features = ["blocking"], optional = true }
 # rustfmt-nightly = { version = "1.2.2", optional = true }
 rust_decimal = { version = "1.0", optional = true }
 semver = "0.9"
@@ -50,6 +50,7 @@ actix-web = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 uuid = { version = "0.8", features = ["serde"] }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 log = { version = "0.4", features = ["kv_unstable"] }
 
 [features]
