--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ failure = "0.1"
 failure_derive = "0.1"
 git2 = { version = "0.13", optional = true }
 heck = { version = "0.3", optional = true }
+http = { version = "0.2", optional = true }
 itertools = "0.9"
 lazy_static = { version = "1.3", optional = true }
 log = { version = "0.4", optional = true }
@@ -57,7 +58,7 @@ log = { version = "0.4", features = ["kv_unstable"] }
 actix = ["paperclip-macros/actix", "paperclip-actix", "v2"]
 actix-nightly = ["actix", "paperclip-actix/nightly", "v2"]
 cli = ["env_logger", "structopt", "git2", "reqwest", "v2", "codegen"]
-codegen = ["heck", "lazy_static", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
+codegen = ["heck", "http", "lazy_static", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 # codegen-fmt = ["codegen", "rustfmt-nightly"]
 datetime = ["paperclip-core/datetime"]
 decimal = ["paperclip-core/decimal"]
